# mmAAVI

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
data/BMMC/: 1_download.py  2_unzip.sh  3_preprocess_ATAC.sh  4_preprocess_RNA.R  create_count_matrix.py
data/MOP5b/: 1_download.py
data/PBMC/: 1_download.py  proteins_alias.txt
data/TripleOmics/: 1_download.sh
data/muto-2021/: 1_download.sh
environments/: env.yaml  env_mmAAVI.sh  env_mmAAVI.yaml  env_mmAAVI_hist.yaml  env_multimap.sh  env_scmomat.sh  enviroment.sh
environments/env_stabmap/: install_packages.R
environments/env_uinmf/: install_packages.R  learn_liger.R
experiments/: exper_utils.py  requirements.txt
experiments/MOP5b/: 0_download.py  1_preprocess.py  2_mmAAVI.py  4_analysis_unsupervised.py  8_semi_supervised.py  9_semi_super_evaluation.py
experiments/MOP5b/3_comparison/: train_multimap.py  train_scmomat.py  train_stabmap.R  train_uinmf.R
experiments/PBMC/: 0_download.sh  10_rm_cell_population.py  1_preprocess.py  2_mmAAVI.py  3_decide_num_clusters.py  4_analysis_unsupervised.py  4_comparison_methods.py  5_metrics_tables.py  6_umap_plot.py  7_overlapping_portion.py  8_semi_supervised.py  9_semi_super_evaluation.py
experiments/PBMC/3_comparison/: train_multimap.py  train_scmomat.py  train_stabmap.R  train_uinmf.R
experiments/TripleOmics/: 1_preprocess.py  2_mmAAVI.py  4_analysis_unsupervised.py
experiments/TripleOmics/3_comparison/: train_scmomat.py
experiments/muto2021/: 0_download.sh  1_preprocess.py  2_mmAAVI.py  4_analysis_unsupervised.py
experiments/muto2021/3_comparison/: train_multimap.py  train_stabmap.R  train_uinmf.R  utils.py
experiments/triple/: 0_download.sh  1_preprocess.py
src/mmAAVI/: __init__.py  dataset.py  decoders.py  discriminator.py  encoders.py  estimator.py  genomic.py  network.py  plotting.py  preprocess.py  trainer.py  typehint.py  utils.py  utils_dev.py
src/mmAAVI/dataset/: __init__.py  data_grid.py  mosaic_data.py  nets_dict.py  preprocess.py  reps_dict.py  torch_dataset.py  utils.py
src/mmAAVI/extension/: c_utils.pyx
src/mmAAVI/model/: MMAAVI.py  __init__.py  base.py  block.py  decoders.py  discriminator.py  encoders.py
src/mmAAVI/train_utils/: checkpoint.py  early_stop.py  history.py  loss_obj.py  metrics.py  utils.py  weighter.py
test/: preprocess.py  test_balance_sampler.py  test_block.py  test_data_grid.py  test_encoder.py  test_mosaic_data.py  test_semisuper_sampler.py  test_torch_data.py  train_pipline.py
test_midas/: download.sh  download_wnn.sh  main.py  wnn.py
(+15 files in other folders)
