[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mmAAVI"
version = "0.0.1"
authors = [
  {name = "Rong Zhiwei", email = "rongzhiwei@bjmu.edu.cn"}
]
description = "A deep generative model that addresses mosaic integration challenges."
keywords = ["bioinformatics", "deep-learning", "single-cell", "moaic-integration"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
readme = "readme.md"
dependencies = [
  # global
  "numpy>=1.23.5",
  "pandas>=1.5.3",
  "scipy>=1.11.1",
  "matplotlib>=3.7.2",
  "torch>=2.0.1",
  "adjustText==0.8",

  # data module
  "scikit-learn>=1.3.0",
  "h5py>=3.8.0",
  "anndata>=0.9.2",
  "biothings_client>=0.3.0",

  # model module
  "tqdm>=4.66.1",
  "igraph>=0.10.3",
  "leidenalg>=0.9.1",
  "tensorboard>=2.14"
]
# optional-dependencies = { dataframe = ["pandas"] }

# [project.scripts]
# hello-package = "hello_packaging.func:hello_packaging_cli"

[tool.setuptools.packages]
find = {where = ["src"], namespaces = true}  # namespaces=false will prevent any folder without an __init__.py file
# [tool.setuptools.packages.find]
# where = ["src"]
# namespaces = false
# src-layout can be discovered by setuptools

# [tool.setuptools.package-data]
# "hello_packaging.data" = ["*.txt"]
