[build-system]
requires = ["setuptools", "cython", "setuptools-scm"]  # 如果使用setup.py并且其中需要运行的包，都需要放在这里
build-backend = "setuptools.build_meta"

[project]
name = "mmAAVI"
authors = [
  {name = "Rong Zhiwei", email = "rongzhiwei@bjmu.edu.cn"}
]
description = "A deep generative model that addresses mosaic integration challenges."
keywords = ["bioinformatics", "deep-learning", "single-cell", "moaic-integration"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
readme = "readme.md"
dependencies = [
  "numpy>=1.23.5",
  "pandas>=1.5.3",
  "scipy>=1.11.1",
  "torch>=2.0.1",
  "scikit-learn>=1.3.0",
  "anndata>=0.9.2",
  "biothings_client>=0.3.0",
  "mudata>=0.2.3",
  "requests_cache>=1.1.1",  # 不用放到模块中，模块外部用户自己用，去得到
  "tqdm>=4.66.1",
  "tensorboard>=2.14",
  # "igraph>=0.10.3",
  # "leidenalg>=0.9.1",
  # "h5py>=3.8.0",
  # "matplotlib>=3.7.2",
  # "adjustText==0.8",
]
dynamic = ["version"]

[tool.setuptools.packages]
find = {where = ["src"], namespaces = true}  # namespaces=false will prevent any folder without an __init__.py file

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm
